#10825 paella: Updated paella to include playlistPlugin.

--- a/Resources/public/paella/player/localization/paella_es.json
+++ b/Resources/public/paella/player/localization/paella_es.json
@@ -58,6 +58,7 @@
 	"Save changes": "Guardar cambios",
 	"Discard changes and close": "Descartar cambios y cerrar",
 	"Paella Editor": "Editor Paella",
+	"Playlist": "Lista de reproducción",
 	"Annotation": "Anotación",
 	"Annotations": "Anotaciones",
 	"Create a new annotation in the current position": "Crear una nueva anotación en la posición actual",
