Update paella to paella 5.1-rc1
Using develop branch

--- a/Resources/public/paella/player/localization/paella_es.json
+++ b/Resources/public/paella/player/localization/paella_es.json
@@ -51,15 +51,8 @@
 	"You are using Firefox version, and some required video playback capabilities are not available until Firefox min_version. Please, update your browser and try again.": "Estás utilizando Firefox version, y algunas capacidades de vídeo necesarias no están disponibles hasta Firefox min_version. Por favor, actualiza tu navegador y prueba otra vez.",
 	"This video is not compatible with any codec installed in your system": "Este vídeo no es compatible con ningún codec instalado en su sistema",
 	"Could not load the video": "No se ha podido cargar el vídeo",
-	"Trimming": "Ajuste de inicio y fin",
-	"Options": "Opciones",
-	"Tool": "Herramienta",
-	"Selection": "Selección",
-	"Save and close editor": "Guardar y cerrar editor",
-	"Save changes": "Guardar cambios",
-	"Discard changes and close": "Descartar cambios y cerrar",
-	"Paella Editor": "Editor Paella",
 	"Playlist": "Lista de reproducción",
+	"Trimming": "Ajuste de inicio y fin",
 	"Annotation": "Anotación",
 	"Annotations": "Anotaciones",
 	"Create a new annotation in the current position": "Crear una nueva anotación en la posición actual",
@@ -75,6 +68,7 @@
 	"None": "Ninguno",
 	"Slides": "Diapositivas",
 	"Slide": "Diapositiva",
+	"Tool": "Herramienta",
 	"Selected tool": "Herramienta seleccionada",
 	"this track does not contain any item": "esta pista no contiene ningún elemento",
 	"Click on timeline outside any track to select current playback time.": "Haz clic en el fondo de la línea de tiempo para establecer el instante actual de reproducción",
@@ -83,6 +77,7 @@
 	"items": "elementos",
 	"from": "desde",
 	"to": "hasta",
+	"Selection": "Selección",
 	"Show statistics": "Mostrar las estadísticas",
 	"Navigate by slides": "Navegar por las dispositivas",
 	"Go Fullscreen": "Ir a pantalla completa",
@@ -95,6 +90,10 @@
 	"Change video quality": "Cambiar la calidad del video",
 	"Play": "Reproducir",
 	"Pause": "Pausar",
+	"Video score": "Puntuación del vídeo",
+	"Not rated": "No puntuado",
+	"Vote": "Votar",
+	"Login to vote": "Inicia sesión para votar",
 	"Searching": "Realizando búsqueda",
 	"Sorry! No results found.": "Lo sentimos, No se encontraron resultados.",
 	"Enter editor mode": "Entrar en el editor",
