TTK-17942: Update Paella Player from 5.2.4 to 5.2.16 keeping Teltek changes. Compiled from teltek/paella@teltek/5.2.x

--- a/Resources/public/paella/player/localization/paella_es.json
+++ b/Resources/public/paella/player/localization/paella_es.json
@@ -51,6 +51,7 @@
 	"You are using Firefox version, and some required video playback capabilities are not available until Firefox min_version. Please, update your browser and try again.": "Estás utilizando Firefox version, y algunas capacidades de vídeo necesarias no están disponibles hasta Firefox min_version. Por favor, actualiza tu navegador y prueba otra vez.",
 	"This video is not compatible with any codec installed in your system": "Este vídeo no es compatible con ningún codec instalado en su sistema",
 	"Could not load the video": "No se ha podido cargar el vídeo",
+	"Error! Captions format not supported.": "Error! El formato de los subtitulos no está soportado.",
 	"Playlist": "Lista de reproducción",
 	"Trimming": "Ajuste de inicio y fin",
 	"Breaks": "Descansos",
