--- a/Resources/public/paella/player/localization/paella_es.json
+++ b/Resources/public/paella/player/localization/paella_es.json
@@ -52,7 +52,9 @@
 	"This video is not compatible with any codec installed in your system": "Este vídeo no es compatible con ningún codec instalado en su sistema",
 	"Could not load the video": "No se ha podido cargar el vídeo",
 	"Error! Captions format not supported.": "Error! El formato de los subtitulos no está soportado.",
+	"Duration": "Duración",
 	"Playlist": "Lista de reproducción",
+	"Volume": "Volumen",
 	"Trimming": "Ajuste de inicio y fin",
 	"Breaks": "Descansos",
 	"Break": "Descanso",
@@ -92,6 +94,5 @@
 	"Continue editing the transcriptions anonymously": "Editar las transcripciones de forma anónima",
 	"Log in and edit the transcriptions": "Identificarse y editar las transcripciones",
 	"Under review": "Revisando",
-	"Change video layout": "Modificar el diseño del video",
-	"Volume": "Volumen"
+	"Change video layout": "Modificar el diseño del video"
 }
