TTK-25319: Add playlist plugin

--- a/Resources/public/paella/player/localization/paella_es.json
+++ b/Resources/public/paella/player/localization/paella_es.json
@@ -54,6 +54,7 @@
 	"Error! Captions format not supported.": "Error! El formato de los subtitulos no está soportado.",
 	"No such HLS stream: the video is not available": "No se ha encontrado el stream de emisión en vivo: el vídeo no está disponible",
 	"Duration": "Duración",
+	"Playlist": "Lista de reproducción",
 	"Trimming": "Ajuste de inicio y fin",
 	"Breaks": "Descansos",
 	"Break": "Descanso",
@@ -88,7 +89,6 @@
 	"Responsive design": "Diseño sensible",
 	"Embed code": "Código de incrustado",
 	"Share on social networks": "Compartir en las redes sociales",
-	"Enter editor mode": "Entrar en el editor",
 	"Change theme": "Cambiar el tema",
 	"You are trying to modify the transcriptions, but you are not Logged in!": "Has seleccionado editar las transcripciones, pero no estás identificado!",
 	"Continue editing the transcriptions anonymously": "Editar las transcripciones de forma anónima",
