--- a/Resources/public/paella/player/localization/paella_eu.json
+++ b/Resources/public/paella/player/localization/paella_eu.json
@@ -80,6 +80,13 @@
 	"Login to vote": "Hasi saioa bozkatzeko",
 	"Searching": "Bilatzen",
 	"Sorry! No results found.": "Sentitzen dugu, ez da emaitzarik aurkitu.",
+	"Enter editor mode": "Entrar en el editor",
+	"Share this video": "Partekatu bideo hau",
+	"Custom size:": "Tamaina pertsonalizatua:",
+	"Choose your embed size. Copy the text and paste it in your html page.": "Hautatu xurgatu beharreko bideoaren tamaina. Kopiatu testua eta itsatsi zure html orrialdean.",
+	"Width:": "Zabalera:",
+	"Height:": "Altuera:",
+	"Video loaded in {0} seconds": "Bideoa {0} segundotan kargatuta",
 	"Change theme": "Aldatu gaia",
 	"You are trying to modify the transcriptions, but you are not Logged in!": "Transkripzioak editatu nahi dituzu, baina ez zaude identifikatuta!",
 	"Continue editing the transcriptions anonymously": "Editar las transcripciones de forma anónima",
